--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
